fixed spacing between talks

--- a/css/gabecohn.css
+++ b/css/gabecohn.css
@@ -479,7 +479,7 @@ h1 .trail{
 
 /* TALKS */
 .section-talks .talk{
-    margin-bottom:50px;
+    margin-bottom:35px;
 }
 
 .section-talks .talks-date{
